Mensaje,ContactoIn,Factoria,Controlador
Cambios en Mensaje y su adaptador para pasar de Date A
LocalDateTime.

Cambio en ContactoIndividual y su adaptador booleano para poder
distinguir contactos agregados de los que no.

Factoria llamada a newInstance para Java>8

Controlador llamada enviarMensaje introducida